# llama.cpp-pd

./: convert_hf_to_gguf.py
conversion/: base.py
docs/: android-gptq2_32.md
ggml/include/: ggml.h
ggml/src/: ggml-quants.c  ggml-quants.h  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  quants.c  quants.h
gguf-py/gguf/: constants.py  quants.py
include/: llama.h
src/: llama-model-loader.cpp  llama-quant.cpp
tools/: CMakeLists.txt
tools/pd-cli/: CMakeLists.txt  pd_cli.cpp
